--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@ permalink: /
     <div class="row">
       <div class="section-title">
         <h2>Our Services</h2>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+        <p>我们致力于通过先进的 AI 技术与深厚的数学底蕴，为您提供精准的教学辅导与数据解决方案。</p>
       </div>
     </div>
     <div class="row ">
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
-          <i class="icon ion-coffee"></i>
-          <h4>Branding</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <i class="icon ion-ios-book-outline"></i>
+          <h4>高端数学课程辅导</h4>
+          <p>提供微积分、高等数学、数学分析及代数拓扑的预备先学辅导，助力高校提前录取与竞赛挑战。 </p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
-          <i class="ion-compass"></i>
-          <h4>Web Design</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <i class="icon ion-ios-analytics-outline"></i>
+          <h4>专业数据处理服务</h4>
+          <p>承接公司或实验室数据分析，深耕拓扑数据分析 (TDA) 领域，挖掘复杂数据背后的核心价值。 </p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
